Add scenarios for security group
New scenarios:
 - create and delete security groups
 - create_and_list_secgroups

Co-Authored-By: Ilya Shakhat <ishakhat@mirantis.com>

Change-Id: If9b25260c8d57dc52d7fb64abbaac0601a0eb4ed

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -478,3 +478,45 @@
       sla:
         failure_rate:
           max: 0
+
+  NovaSecGroup.create_and_delete_secgroups:
+    -
+      args:
+        security_group_count: 5
+        rules_per_security_group: 5
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        quotas:
+          neutron:
+            security_group: -1
+            security_group_rule: -1
+      sla:
+        failure_rate:
+          max: 0
+
+  NovaSecGroup.create_and_list_secgroups:
+    -
+      args:
+        security_group_count: 5
+        rules_per_security_group: 5
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        quotas:
+          neutron:
+            security_group: -1
+            security_group_rule: -1
+      sla:
+        failure_rate:
+          max: 0
