--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -1160,3 +1160,43 @@
         type: "constant"
         times: 10
         concurrency: 5
+
+  NovaSecGroup.create_and_delete_secgroups:
+    -
+      args:
+        security_group_count: 5
+        rules_per_security_group: 5
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        quotas:
+          nova:
+            security_groups: -1
+            security_group_rules: -1
+      sla:
+        max_failure_percent: 0
+
+  NovaSecGroup.create_and_list_secgroups:
+    -
+      args:
+        security_group_count: 5
+        rules_per_security_group: 5
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        quotas:
+          nova:
+            security_groups: -1
+            security_group_rules: -1
+      sla:
+        max_failure_percent: 0
