--- a/rally-jobs/rally-zaqar.yaml
+++ b/rally-jobs/rally-zaqar.yaml
@@ -10,3 +10,17 @@
       sla:
         failure_rate:
           max: 0
+
+  ZaqarBasic.producer_consumer:
+    -
+      args:
+        name_length: 10
+        min_msg_count: 50
+        max_msg_count: 200
+      runner:
+        type: "constant"
+        times: 100
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
