Add scenario for booting vm with security groups
Name of new scenario:
  boot-and-delete-server-with-secgroups
Its plan:
  - create N security groups with M rules per group
  - [neutron-specific]: create network with 1 subnet(required to boot vm
    with security groups)
  - boot a VM with created security groups
  - get list of attached security groups to server
  - delete server
  - delete all security groups
  - [neutron-specific]: delete created network
  - check that all groups were attached to server

Also, action "nova.create_%s_rules_in_every_of_%s_security_group"
was renamed to "nova.create_%s_rules", because original name is too long
and doesn't clearly display the number of created rules.

Change-Id: I0c4d30ebf03195a5bcd68e87a6ba1d7756fc7fc0

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -890,7 +890,8 @@
           tenants: 3
           users_per_tenant: 2
       sla:
-        max_failure_percent: 0
+        failure_rate:
+          max: 0
 
     -
       args:
@@ -1177,7 +1178,8 @@
             security_groups: -1
             security_group_rules: -1
       sla:
-        max_failure_percent: 0
+        failure_rate:
+          max: 0
 
   NovaSecGroup.create_and_list_secgroups:
     -
@@ -1197,4 +1199,31 @@
             security_groups: -1
             security_group_rules: -1
       sla:
-        max_failure_percent: 0
+        failure_rate:
+          max: 0
+
+
+  NovaSecGroup.boot_and_delete_server_with_secgroups:
+    -
+      args:
+        flavor:
+          name: "m1.tiny"
+        image:
+          name: "^cirros.*uec$"
+        security_group_count: 5
+        rules_per_security_group: 5
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        quotas:
+          nova:
+            security_groups: -1
+            security_group_rules: -1
+      sla:
+        failure_rate:
+          max: 25
