--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -520,3 +520,28 @@
       sla:
         failure_rate:
           max: 0
+
+  NovaSecGroup.boot_and_delete_server_with_secgroups:
+    -
+      args:
+        flavor:
+          name: "m1.tiny"
+        image:
+          name: "^cirros.*uec$"
+        security_group_count: 5
+        rules_per_security_group: 5
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        quotas:
+          neutron:
+            security_group: -1
+            security_group_rule: -1
+      sla:
+        failure_rate:
+          max: 25
