Add cinder stress scenario: nested snapshots
This scenario creates volumes and snapshots chain with custom nested
level:
1. Create volume
2. Create snapshot
3. Create volume from snapshot
... and so on

Change-Id: I4be5bb9435f0df5e02dfa3eca6f3e764c0786c55

--- a/doc/samples/tasks/scenarios/cinder/create-snapshot-and-attach-volume.yaml
+++ b/doc/samples/tasks/scenarios/cinder/create-snapshot-and-attach-volume.yaml
@@ -3,8 +3,9 @@
     -
       args:
           volume_type: false
-          min_volume_size: 1
-          max_volume_size: 5
+          volume_size:
+              min: 1
+              max: 5
       runner:
         type: "constant"
         times: 4
@@ -22,8 +23,9 @@
     -
       args:
           volume_type: true
-          min_volume_size: 1
-          max_volume_size: 5
+          volume_size:
+              min: 1
+              max: 5
       runner:
         type: "constant"
         times: 4
