--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -755,8 +755,9 @@
     -
       args:
           volume_type: false
-          min_volume_size: 1
-          max_volume_size: 2
+          volume_size:
+              min: 1
+              max: 2
       runner:
         type: "constant"
         times: 3
@@ -777,8 +778,9 @@
     -
       args:
           volume_type: true
-          min_volume_size: 1
-          max_volume_size: 2
+          volume_size:
+              min: 1
+              max: 2
       runner:
         type: "constant"
         times: 3
@@ -796,6 +798,31 @@
       sla:
           failure_rate:
             max: 0
+
+
+  CinderVolumes.create_nested_snapshots_and_attach_volume:
+    -
+      args:
+          volume_size:
+              min: 1
+              max: 5
+          nested_level:
+              min: 5
+              max: 10
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 1
+        servers:
+          image:
+            name: "^cirros.*uec$"
+          flavor:
+            name: "m1.tiny"
+          servers_per_tenant: 2
 
 
   GlanceImages.create_and_delete_image:
