--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ python-heatclient>=0.2.9
 python-ceilometerclient>=1.0.6
 python-ironicclient>=0.2.1
 python-saharaclient>=0.7.6
+python-troveclient>=1.0.7
 python-zaqarclient>=0.0.3
 python-subunit>=0.0.18
 requests>=2.2.0,!=2.4.0
