Fix flavor issues in samples
Change all absent flavors to existing in gates jobs. To allow
functional testing of samples in gate.

Change-Id: Ic88da1d00b6d47e5251623a25dd4ef8fa5682084

--- a/samples/tasks/scenarios/cinder/create-and-attach-volume.yaml
+++ b/samples/tasks/scenarios/cinder/create-and-attach-volume.yaml
@@ -6,7 +6,7 @@
           image:
             name: "^cirros.*uec$"
           flavor:
-            name: "m1.nano"
+            name: "m1.tiny"
       runner:
         type: "constant"
         times: 5
