--- a/samples/tasks/scenarios/nova/boot-server-attach-created-volume-and-live-migrate.yaml
+++ b/samples/tasks/scenarios/nova/boot-server-attach-created-volume-and-live-migrate.yaml
@@ -2,7 +2,7 @@
 NovaServers.boot_server_attach_created_volume_and_live_migrate:
 - args:
     flavor:
-      name: m1.nano
+      name: m1.tiny
     image:
       name: "^cirros.*uec$"
     size: 10
