--- a/samples/tasks/scenarios/nova/boot-and-delete-server-with-secgroups.yaml
+++ b/samples/tasks/scenarios/nova/boot-and-delete-server-with-secgroups.yaml
@@ -3,7 +3,7 @@
     -
       args:
         flavor:
-            name: "m1.nano"
+            name: "m1.tiny"
         image:
             name: "^cirros.*uec$"
         security_group_count: 10
