--- a/samples/tasks/scenarios/nova/boot-and-migrate.yaml
+++ b/samples/tasks/scenarios/nova/boot-and-migrate.yaml
@@ -2,7 +2,7 @@
 NovaServers.boot_and_migrate_server:
 - args:
     flavor:
-      name: m1.nano
+      name: m1.tiny
     image:
       name: "^cirros.*uec$"
   runner:
