--- a/samples/tasks/scenarios/nova/boot-and-rebuild.yaml
+++ b/samples/tasks/scenarios/nova/boot-and-rebuild.yaml
@@ -2,9 +2,9 @@
 NovaServers.boot_and_rebuild_server:
 - args:
     flavor:
-      name: m1.nano
+      name: "m1.tiny"
     from_image:
-      name: "cirros-0.3.1-x86_64-uec"
+      name: "cirros-0.3.2-x86_64-uec"
     to_image:
       name: "cirros-0.3.2-x86_64-uec"
   runner:
