--- a/samples/tasks/scenarios/vm/boot-runcommand-delete.yaml
+++ b/samples/tasks/scenarios/vm/boot-runcommand-delete.yaml
@@ -3,7 +3,7 @@
     -
       args:
         flavor:
-            name: "m1.nano"
+            name: "m1.tiny"
         image:
             name: "^cirros.*uec$"
         floating_network: "public"
