Fix nested snapshot job
Add sla section, change max volume size,
times and concurrency

Change-Id: Ia3c26afec69db53ae131fe2f326a7db2d172c3ae

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -805,14 +805,14 @@
       args:
           volume_size:
               min: 1
-              max: 5
+              max: 2
           nested_level:
-              min: 5
-              max: 10
+              min: 2
+              max: 2
       runner:
         type: "constant"
-        times: 1
-        concurrency: 1
+        times: 2
+        concurrency: 2
       context:
         users:
           tenants: 2
@@ -823,7 +823,9 @@
           flavor:
             name: "m1.tiny"
           servers_per_tenant: 2
-
+      sla:
+          failure_rate:
+            max: 0
 
   GlanceImages.create_and_delete_image:
     -
