Add the flavor context
Add the flavor context (moved from samples) that is creating and
destroying a context specified by the configuration.

Change-Id: I8072867c1af49faeaf299d4da07930e42b3060bf

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -952,7 +952,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: "^ram64$"
         image:
             name: "^cirros.*uec$"
         auto_assign_nics: false
@@ -964,6 +964,10 @@
         users:
           tenants: 3
           users_per_tenant: 2
+        flavors:
+          -
+            name: "ram64"
+            ram: 64
       sla:
         failure_rate:
           max: 0
