Sahara auto_security_group parameter added
The auto_security_group is now enabled by default for all Node Groups in all
Clusters. This is required for setting up a security group with a list
of TCP port for Hadoop operations.

Sahara does both creating and removig security groups automatically.

Change-Id: Ie862b541f468286bf4380f6e8d19014229beef91

--- a/doc/samples/tasks/scenarios/sahara/create_and_delete_cluster.yaml
+++ b/doc/samples/tasks/scenarios/sahara/create_and_delete_cluster.yaml
@@ -7,6 +7,7 @@
         node_count: 2
         plugin_name: "vanilla"
         hadoop_version: "2.3.0"
+        auto_security_group: True
       runner:
         type: "constant"
         times: 4
