--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -600,6 +600,25 @@
         failure_rate:
           max: 0
 
+  CinderVolumes.list_volumes:
+    -
+      args:
+        detailed: True
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 3
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 1
+        volumes:
+          size: 1
+          volumes_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   CinderVolumes.create_volume:
     -
       args:
