Use Network Context in security groups scenario
This patch replaces code that creates networking resources in
NovaSecGroup.boot_and_delete_server_with_secgroups
with usage of our new Network Context.

Change-Id: I9e63256d409978763ee3bb9bf0d896313ba6dec9

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -1270,6 +1270,8 @@
         users:
           tenants: 3
           users_per_tenant: 2
+        network:
+          start_cidr: "100.1.0.0/26"
         quotas:
           nova:
             security_groups: -1
