--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -560,6 +560,8 @@
         users:
           tenants: 3
           users_per_tenant: 2
+        network:
+          start_cidr: "100.1.0.0/26"
         quotas:
           neutron:
             security_group: -1
