--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -961,6 +961,28 @@
         failure_rate:
           max: 0
 
+  NovaServers.list_servers:
+    -
+      args:
+        detailed: True
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 3
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 1
+        servers:
+          flavor:
+              name: "m1.tiny"
+          image:
+              name: "^cirros.*uec$"
+          servers_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   NovaServers.resize_server:
     -
       args:
