Improvements for scenario VMTasks.boot_runcommand_delete
Allow to run this scenario for neutron-based cluster, add support
of network context, and generally simplify its usage by making networking
configuration as simple as possible.
So user gets rid of confusing configration and focus on main job -
running arbitrary script on VM.

Changes:
  * neutron support (this scenario run only for nova-network before)
  * usage of rally.benchmark.wrappers.network, so networking implementation
    details are behind the scenes now and scenario code is simplier
  * scenario args `fixed_network' and `use_floating_ip' are removed
    because they make sense only for devstack where fixed network
    is available, so that is absolutely unusable on any real OpenStack
    and even confusing, so scenario will always use floating ip
  * default `start_cidr' values are set to C-class network
  * improvements in rally.benchmark.wrappers.network

Change-Id: I3ce9875dee3e62713afcab14cb8af35c27a2d083

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -351,7 +351,7 @@
           tenants: 3
           users_per_tenant: 2
         network:
-          start_cidr: "100.1.0.0/26"
+          start_cidr: "10.2.0.0/24"
           networks_per_tenant: 2
       sla:
         failure_rate:
@@ -573,3 +573,23 @@
       sla:
         failure_rate:
           max: 0
+
+  VMTasks.boot_runcommand_delete:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: {{image_name}}
+        script: "/home/jenkins/.rally/extra/instance_dd_test.sh"
+        interpreter: "/bin/sh"
+        username: "cirros"
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        network: {}
