--- a/samples/tasks/scenarios/vm/boot-runcommand-delete.yaml
+++ b/samples/tasks/scenarios/vm/boot-runcommand-delete.yaml
@@ -6,9 +6,7 @@
             name: "m1.nano"
         image:
             name: "^cirros.*uec$"
-        fixed_network: "private"
         floating_network: "public"
-        use_floatingip: true
         force_delete: false
         script: "doc/samples/tasks/support/instance_dd_test.sh"
         interpreter: "/bin/sh"
@@ -21,3 +19,4 @@
         users:
           tenants: 3
           users_per_tenant: 2
+        network: {}
