Input task templates and task cmd cleanup
Implement task templates based on jinja2.

This allow us to pass as a task jinja2 template
and it's argument via arguments --task-args and
--task-args-file that should be dict in JSON or YAML
presentations.

So now command looks like:

rally task start <file> --task-args <template-args-json-or-yaml> \
  --task-args-file <file-with-args-in-json-yaml>

If both --task-args and --task-args-file then file dict is updated
by task args file.

Extend rally CI performance job. Now we can set template args
via file with name: ${TASK}_args.yaml

Bonus:
* Better message on InvalidTask format
* Remove redudant catch of "keyboardinterrupt"
  it should be implement in different way.
* Replace ' -> " in rally.cmd.commands.task
  and tests.unit.cmd.commands.task
* Imporve a bit CLI messages on rally task start
* Remove old plot2html command (it's enough deprecated)
* Improve test coverage of rally/cmd/commands/task
* Fix rally/cmd/commands/validate return 1 if bad format
* Write errors to stderr (in whole cmd/commands/task.py)

Change-Id: I7dadf2986bb10407865bc73bb2fb8c96a5162d9a

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -1,3 +1,4 @@
+{% set image_name = "^cirros.*uec$" %}
 ---
   Dummy.dummy:
     -
@@ -302,7 +303,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
       runner:
         type: "constant"
         times: 4
@@ -321,7 +322,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
       runner:
         type: "constant"
         times: 4
@@ -340,7 +341,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
       runner:
         type: "constant"
         times: 4
@@ -362,7 +363,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
         detailed: True
       runner:
         type: "constant"
@@ -382,7 +383,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
         actions:
           -
             hard_reboot: 1
@@ -410,7 +411,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
         volume_size: 1
       runner:
         type: "constant"
@@ -430,7 +431,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
         volume_size: 1
       runner:
         type: "constant"
@@ -450,7 +451,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
       runner:
         type: "constant"
         times: 3
@@ -469,7 +470,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
         to_flavor:
             name: "m1.small"
         confirm: true
@@ -549,7 +550,7 @@
         flavor:
           name: "m1.tiny"
         image:
-          name: "^cirros.*uec$"
+          name: {{image_name}}
         security_group_count: 5
         rules_per_security_group: 5
       runner:
@@ -658,7 +659,7 @@
       args:
         size: 1
         image:
-          name: "^cirros.*uec$"
+          name: {{image_name}}
         flavor:
           name: "m1.tiny"
       runner:
@@ -690,7 +691,7 @@
           users_per_tenant: 1
         servers:
           image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
           flavor:
             name: "m1.tiny"
           servers_per_tenant: 2
@@ -713,7 +714,7 @@
           users_per_tenant: 1
         servers:
           image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
           flavor:
             name: "m1.tiny"
           servers_per_tenant: 1
@@ -741,7 +742,7 @@
           users_per_tenant: 1
         servers:
           image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
           flavor:
             name: "m1.tiny"
           servers_per_tenant: 2
