--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -746,7 +746,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
       runner:
         type: "constant"
         times: 3
@@ -764,7 +764,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
       runner:
         type: "constant"
         times: 3
@@ -785,7 +785,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
         force_delete: true
       runner:
         type: "constant"
@@ -805,7 +805,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
         detailed: True
       runner:
         type: "constant"
@@ -835,7 +835,7 @@
           flavor:
               name: "m1.tiny"
           image:
-              name: "^cirros.*uec$"
+              name: {{image_name}}
           servers_per_tenant: 2
       sla:
         failure_rate:
@@ -847,7 +847,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
         to_flavor:
             name: "m1.small"
         confirm: true
@@ -869,7 +869,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
         actions:
           -
             hard_reboot: 1
@@ -895,7 +895,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
         volume_size: 1
       runner:
         type: "constant"
@@ -915,7 +915,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
         volume_size: 1
       runner:
         type: "constant"
@@ -935,7 +935,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
       runner:
         type: "constant"
         times: 2
@@ -954,7 +954,7 @@
         flavor:
             name: "^ram64$"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
         auto_assign_nics: false
       runner:
         type: "constant"
@@ -976,7 +976,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "^cirros.*uec$"
+            name: {{image_name}}
       runner:
         type: "constant"
         times: 3
@@ -995,7 +995,7 @@
         flavor:
           name: "m1.tiny"
         image:
-          name: "^cirros.*uec$"
+          name: {{image_name}}
         fixed_network: "private"
         floating_network: "public"
         use_floatingip: true
@@ -1019,7 +1019,7 @@
         flavor:
           name: "m1.tiny"
         image:
-          name: "^cirros.*uec$"
+          name: {{image_name}}
         volume_args:
             size: 2
         fixed_network: "private"
@@ -1045,7 +1045,7 @@
         flavor:
           name: "m1.tiny"
         image:
-          name: "^cirros.*uec$"
+          name: {{image_name}}
         fixed_network: "private"
         use_floatingip: false
         script: "/home/jenkins/.rally/extra/instance_dd_test.sh"
@@ -1122,7 +1122,7 @@
         flavor:
           name: "m1.tiny"
         image:
-          name: "^cirros.*uec$"
+          name: {{image_name}}
         security_group_count: 5
         rules_per_security_group: 5
       runner:
