--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Babel>=1.3
 decorator>=3.4.0
 fixtures>=0.3.14
 iso8601>=0.1.9
+Jinja2>=2.6  # BSD License (3 clause)
 jsonschema>=2.0.0,<3.0.0
 netaddr>=0.7.12
 oslo.config>=1.6.0  # Apache-2.0
