[Sahara] Add Cloudera plugin support
Cloudera plugin added. The only supported version is 5.

Small refactorings:
* added manager role to set up Cloudera plugin properly
* HDP v2 also now has a manager node group
* node_count -> worker_count

Change-Id: Ia21f50527950ca127dc2d9dc1fedd0a7b4892ab0

--- a/samples/tasks/scenarios/sahara/create_and_delete_cluster.yaml
+++ b/samples/tasks/scenarios/sahara/create_and_delete_cluster.yaml
@@ -4,7 +4,7 @@
       args:
         flavor:
          name: "m1.small"
-        node_count: 2
+        workers_count: 3
         plugin_name: "vanilla"
         hadoop_version: "2.3.0"
         auto_security_group: True
