--- a/samples/tasks/scenarios/sahara/create_scale_delete_cluster.yaml
+++ b/samples/tasks/scenarios/sahara/create_scale_delete_cluster.yaml
@@ -4,7 +4,7 @@
       args:
         flavor:
          name: "m1.small"
-        node_count: 2
+        workers_count: 3
         deltas:
           - 1
           - -1
