Add image arg for creating volume from image
This change adds image arg to next scenarios: create_volume,
create_and_delete_volume, create_and_list_volume.
Add nullable arg to image_exists for specify image require.

Change-Id: Idb2f80efa24d6f721bbdafc4644afc68d59552ac

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -503,12 +503,45 @@
       sla:
         failure_rate:
           max: 0
+    -
+      args:
+        size: 1
+        image:
+          name: {{image_name}}
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 3
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
 
   CinderVolumes.create_and_list_volume:
     -
       args:
         size: 1
         detailed: True
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 3
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        size: 1
+        detailed: True
+        image:
+          name: {{image_name}}
       runner:
         type: "constant"
         times: 3
@@ -544,6 +577,22 @@
     -
       args:
         size: 1
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        size: 1
+        image:
+          name: {{image_name}}
       runner:
         type: "constant"
         times: 2
