--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -622,6 +622,24 @@
         failure_rate:
           max: 0
 
+  CinderVolumes.create_from_volume_and_delete_volume:
+    -
+      args:
+        size: 1
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        volumes:
+          size: 1
+      sla:
+        failure_rate:
+          max: 0
+
   CinderVolumes.create_and_delete_snapshot:
     -
       args:
