--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -598,6 +598,23 @@
         failure_rate:
           max: 0
 
+  CinderVolumes.create_and_extend_volume:
+    -
+      args:
+        size: 1
+        new_size: 2
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
   CinderVolumes.create_and_delete_snapshot:
     -
       args:
