--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
 Babel>=1.3
+boto>=2.32.1
 decorator>=3.4.0
 fixtures>=0.3.14
 iso8601>=0.1.9
