Add unstable job file + return SLA for boot from volume
Now we have unstable job (that is non-voting)

*) From one side we can get job -1 vote for benchmarks
that has races and track status of them + ensure
that they works at least somethimes.

*) From other side we don't block our gates

As well put back SLA checks related to booting from volume
functionallity, that was fixed in nova.

Change-Id: Ia716abcef0e903151053effa3c50df4b0e78649d

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -905,6 +905,10 @@
         users:
           tenants: 3
           users_per_tenant: 3
+      sla:
+        failure_rate:
+          max: 0
+
 
   NovaServers.boot_server_from_volume:
     -
@@ -922,6 +926,10 @@
         users:
           tenants: 2
           users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
 
   NovaServers.snapshot_server:
     -
@@ -1030,6 +1038,9 @@
         users:
           tenants: 1
           users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
 
     -
       args:
