Make Rally gates more stable by moving things to unstable job
  1) Remove SLA check from NovaServers.boot_and_delete_server[2]
  2) Move 2 more cinder benchmarks to unstable

Change-Id: I16e559af5d6fafaadbf2436f27cdb4923fed78dd

--- a/rally-jobs/unstable-neutron.yaml
+++ b/rally-jobs/unstable-neutron.yaml
@@ -41,6 +41,46 @@
         failure_rate:
           max: 0
 
+  NovaServers.boot_server_from_volume_and_delete:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: {{image_name}}
+        volume_size: 1
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
+  NovaServers.boot_server_from_volume:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: {{image_name}}
+        volume_size: 1
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   CinderVolumes.create_and_attach_volume:
     -
       args:
