--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -593,3 +593,19 @@
           tenants: 3
           users_per_tenant: 2
         network: {}
+
+  HeatStacks.create_and_delete_stack:
+    -
+      args:
+        template_path: '/home/jenkins/.rally/extra/server_with_ports.yaml.template'
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 3
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
