--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = py26,py27,pep8
+envlist = py26,py27,py33,py34,pep8
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
@@ -41,7 +41,7 @@ downloadcache = ~/cache/pip
 ignore = E126,H703
 show-source = true
 builtins = _
-exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools,*rally/verification/verifiers/tempest/openstack-tempest*,build,*rally/openstack*
+exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools,build,*rally/openstack*
 
 [hacking]
 import_exceptions = rally.common.i18n
