--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pbr>=0.6,!=0.7,<1.0
 pecan>=0.8.0
 PrettyTable>=0.7,<0.8
 PyYAML>=3.1.0
+psycopg2
 python-designateclient>=1.0.0
 python-glanceclient>=0.15.0
 python-keystoneclient>=0.11.1
