--- a/samples/tasks/sla/create-and-delete-user.yaml
+++ b/samples/tasks/sla/create-and-delete-user.yaml
@@ -9,4 +9,5 @@
         concurrency: 10
       sla:
         max_seconds_per_iteration: 4
-        max_failure_percent: 1
+        failure_rate:
+          max: 1
