--- a/rally-jobs/rally-designate.yaml
+++ b/rally-jobs/rally-designate.yaml
@@ -72,3 +72,31 @@
       sla:
         failure_rate:
           max: 0
+
+  DesignateBasic.create_and_list_servers:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 1
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
+  DesignateBasic.create_and_delete_server:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 1
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
