Implement abort in scenario runners
* Implement abort() in all the scenario classes
* Add a Dummy scenario for serial & constant_for_duration runners
  to the gate job

Change-Id: I526d594ea9a185fc7d6e3add0f119b529b4a070a

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -232,11 +232,32 @@
 
     -
       args:
+        sleep: 0.1
+      runner:
+        type: "constant_for_duration"
+        duration: 5
+        concurrency: 5
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
         sleep: 0.001
       runner:
         type: "rps"
         times: 2000
         rps: 200
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
+        sleep: 0.1
+      runner:
+        type: "serial"
+        times: 20
       sla:
         failure_rate:
           max: 0
