Fix template paths in heat samples
Fixed template paths in heat samples. Previous
version tried to find templates in the current folder but
these templates are placed in "templates" folder

Change-Id: I309f002b1ec570dd5ad3e5e6c83d6f538072afb5

--- a/samples/tasks/scenarios/heat/create-and-delete-stack_with_neutron.yaml
+++ b/samples/tasks/scenarios/heat/create-and-delete-stack_with_neutron.yaml
@@ -2,7 +2,7 @@
   HeatStacks.create_and_delete_stack:
     -
       args:
-        template_path: 'server_with_ports.yaml.template'
+        template_path: "templates/server_with_ports.yaml.template"
       runner:
         type: "constant"
         times: 10
