Implement create_and_upload_volume_to_image scenario for Cinder
The `create_and_upload_volume_to_image' sceanario can not be run
on the DSVM gate with the default settings because it uses 1GB
Swift backend for Glance image store.

Change-Id: I41e1b391c560c7b9156e68c640531942cc8bf34c

--- a/rally-jobs/rally-mos_neutron_v3.yaml
+++ b/rally-jobs/rally-mos_neutron_v3.yaml
@@ -258,3 +258,19 @@
       sla:
         failure_rate:
           max: 0
+
+  CinderVolumes.create_and_upload_volume_to_image:
+    -
+      args:
+        size: 1
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
