Remove all non-incubated oslo code
Rally repository includes openstack.common module with modules from
oslo-incubator(modules are listed in openstack-common.conf file).

All those modules can be splitted by 4 categories:
 1. logging modules
 2. aas related modules
 3. cliutils
 4. config

Modules from first category were graduated to separate lib, so we can remove
them and use `oslo.log`.

Modules from second category are not really used and will be not used,
because Rally-as-a-Service will use flask microframework instead of
pecan(modules from oslo-incubator are designed for pecan).

Since oslo core team did not plan to graduate `cliutils` module from
oslo-incubator, so there are no reasons to sync this module with oslo, we
can copy needed functions and maintain them in our repo.

Additional to rally.openstack dir, modules from oslo incubator are located
in tools dir.
tools/config modules works pretty bad, opts from rally.osclients always lost
during automated config generator.
`oslo.config` lib provides a better way to autogenerate config sample of
Rally. It requires new entry point, which returns a list with all opts(look
at 'rally.common.opts', 'setup.cfg' for more details). Since all opts are
used in one place, their names were unified.
Also config was updated(via `tox -egenconfig`).

tools/rally.bash_completion file is moved to etc dir, because etc dir
corresponds better and it gave us ability to remove whole tools dir

Closes-Bug: #1378960

Change-Id: Ic127269c367275d3adcfc9f40d9144fce8295391

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,13 +24,14 @@ packages =
 
 data_files =
     /etc/bash_completion.d =
-        tools/rally.bash_completion
+        etc/rally.bash_completion
 
 [entry_points]
 console_scripts =
     rally = rally.cmd.main:main
-    rally-api = rally.cmd.api:main
     rally-manage = rally.cmd.manage:main
+oslo.config.opts =
+    rally = rally.common.opts:list_opts
 
 [global]
 setup-hooks =
