--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,13 @@ commands = python setup.py testr --coverage --testr-args='{posargs}'
 changedir = doc/source
 commands = make html
 
+[testenv:genconfig]
+commands =
+    oslo-config-generator --output-file etc/rally/rally.conf.sample \
+    --namespace rally \
+    --namespace oslo.db \
+    --namespace oslo.log
+
 [tox:jenkins]
 downloadcache = ~/cache/pip
 
@@ -41,7 +48,7 @@ downloadcache = ~/cache/pip
 ignore = E126,H703
 show-source = true
 builtins = _
-exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools,build,*rally/openstack*,setup.py
+exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools,build,setup.py
 
 [hacking]
 import_exceptions = rally.common.i18n
