--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,14 @@ iso8601>=0.1.9
 Jinja2>=2.6  # BSD License (3 clause)
 jsonschema>=2.0.0,<3.0.0
 netaddr>=0.7.12
-oslo.config>=1.6.0  # Apache-2.0
-oslo.db>=1.4.1  # Apache-2.0
-oslo.i18n>=1.3.0  # Apache-2.0
+oslo.config>=1.6.0                      # Apache-2.0
+oslo.db>=1.4.1                          # Apache-2.0
+oslo.i18n>=1.3.0                        # Apache-2.0
+oslo.log>=0.1.0                         # Apache-2.0
 oslo.serialization>=1.2.0               # Apache-2.0
 oslo.utils>=1.2.0                       # Apache-2.0
 paramiko>=1.13.0
 pbr>=0.6,!=0.7,<1.0
-pecan>=0.8.0
 PrettyTable>=0.7,<0.8
 PyYAML>=3.1.0
 psycopg2
@@ -36,4 +36,3 @@ requests>=2.2.0,!=2.4.0
 SQLAlchemy>=0.9.7,<=0.9.99
 sphinx>=1.1.2,!=1.2.0,!=1.3b1,<1.3
 six>=1.9.0
-WSME>=0.6
