Add update + add/delete resource cases
The patch defines the following complex cases for
create-update-delete stack scenario in rally tests for Heat:
Case 1:
- Heat creates a stack
- Heat updates the stack (stack resource is updating
and children resource is creating during stack-update)
- Heat deletes the stack
Case 2:
- Heat creates a stack
- Heat updates the stack (stack resource is updating and children
resource is deleting during stack-update)
- Heat deletes the stack

Change-Id: I9d420b316ce38fd73f8eb74c0be253ed1a20f7db

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -553,6 +553,38 @@
         failure_rate:
           max: 0
 
+    -
+      args:
+        template_path: "/home/jenkins/.rally/extra/resource_group.yaml.template"
+        updated_template_path: "/home/jenkins/.rally/extra/updated_resource_group_increase.yaml.template"
+      runner:
+        type: "constant"
+        times: 6
+        concurrency: 3
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 3
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
+        template_path: "/home/jenkins/.rally/extra/resource_group.yaml.template"
+        updated_template_path: "/home/jenkins/.rally/extra/updated_resource_group_reduce.yaml.template"
+      runner:
+        type: "constant"
+        times: 6
+        concurrency: 3
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 3
+      sla:
+        failure_rate:
+          max: 0
+
   Authenticate.keystone:
     -
       runner:
