Replace ' with " in rally/benchmark and tests/unit
Partial bug: 1405884

Change-Id: I43cb7440b7b2a284ff08538860b1f85c1da0925d

--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ downloadcache = ~/cache/pip
 ignore = E126,H703
 show-source = true
 builtins = _
-exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools,build,*rally/openstack*
+exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools,build,*rally/openstack*,setup.py
 
 [hacking]
 import_exceptions = rally.common.i18n
