Add list-stack-with-resources scenario
Added scenario that allows to test list_resources(stack) command
in Heat. In addition, added samples and unittest for the scenario.

Change-Id: I05c8dd12807756d35191a79820f3ff9ec0ab35ac

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -585,6 +585,23 @@
         failure_rate:
           max: 0
 
+  HeatStacks.list_stacks_and_resources:
+    -
+      runner:
+        type: "constant"
+        times: 6
+        concurrency: 3
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 3
+        stacks:
+          stacks_per_tenant: 2
+          resources_per_stack: 10
+      sla:
+        failure_rate:
+          max: 0
+
   Authenticate.keystone:
     -
       runner:
