Add base for Swift API Benchmarks - Patch-1
This patch adds swiftclient to osclients, updates the requirements,
and unit tests.

Blueprint benchmark-scenarios-for-swift

Change-Id: I464a19a219c0b753eca42d98042cde705d0678db

--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ python-ironicclient>=0.2.1
 python-saharaclient>=0.7.6
 python-troveclient>=1.0.7
 python-zaqarclient>=0.0.3
+python-swiftclient>=2.2.0
 python-subunit>=0.0.18
 requests>=2.2.0,!=2.4.0
 SQLAlchemy>=0.9.7,<=0.9.99
