Add create-check-delete stack scenario
The patch includes scenario that measures performance
for the following scenario steps:
- Create a new stack from template in Heat
- Check the created stack and its resources in Heat.
- Delete the stack.
The patch includes samples and unittests.

Change-Id: I512f5d5c01d8f5973b68672476e970c54000470b

--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -193,6 +193,13 @@
 # (floating point value)
 #heat_stack_resume_poll_interval = 1.0
 
+# Time(in sec) to wait for stack to be checked. (floating point value)
+#heat_stack_check_timeout = 3600.0
+
+# Time interval(in sec) between checks when waiting for stack checking.
+# (floating point value)
+#heat_stack_check_poll_interval = 1.0
+
 # Time to sleep after start before polling for status (floating point
 # value)
 #nova_server_start_prepoll_delay = 0.0
