--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -509,6 +509,22 @@
         failure_rate:
           max: 0
 
+  HeatStacks.create_check_delete_stack:
+    -
+      args:
+        template_path: "/home/jenkins/.rally/extra/random_strings.yaml.template"
+      runner:
+        type: "constant"
+        times: 6
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   HeatStacks.create_update_delete_stack:
     -
       args:
